# nikolai-desktop

./: .eslintignore  .gitattributes  .gitignore  AGENT_ARCHITECTURE_GUARD.md  AGENT_ENGINEERING_RULES.md  ALL_SET.md  BANNER_OLLAMA_PROXY_COMPLETE.txt  BEFORE_AFTER.md  CERTIFICATE_OF_COMPLETION.txt  CHECK_EXCLUDED_PORTS.ps1  COMPLETE_INDEX.md  COMPLETE_REPORT.txt  D1_SUMMARY.md  D2_COMPLETE.md  D2_EXECUTION_COMPLETE.md  D2_FINAL_CONFIRMATION.md  D2_FINAL_REPORT.md  DOCUMENTATION_INDEX.md  EXECUTION_COMPLETE_SUMMARY.txt  EXECUTION_SUMMARY.txt  FILE_VERIFICATION_REPORT.txt  FINAL_PORT_SYNC_REPORT.txt  FINAL_REPORT.txt  FINAL_STATUS_REPORT.txt  FINAL_SUMMARY.md  FINAL_SUMMARY.txt  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.txt  MACRO_RECORDER_ANALYSIS.md  MACRO_REPLAY_DESIGN.md  MACRO_REPLAY_IMPLEMENTATION_REPORT.md  MACRO_REPLAY_INSPECTION.md  MACRO_REPLAY_SIMULATION.md  MACRO_TEST_RISK.md  MACRO_TEST_SYSTEM_DESIGN.md  MCP_README.md  MCP_TOOLS_IMPLEMENTATION.md  MCP_VERIFICATION.md  OLLAMA_PROXY_COMPLETE.txt  OLLAMA_PROXY_COMPLETE_CERTIFICATE.txt  (+88 more)
mcp-diag/: SUMMARY.txt  (+1 more)
src-tauri/: Cargo.toml  Cargo.toml.bak_011_20260129_095012  Cargo.toml.bak_fix  tauri.conf.json  tauri.conf.json.bak_011_20260129_095012  tauri.conf.json.bak_before_build_20260128_234535  tauri.conf.json.bak_bomfix_20260128_233452  tauri.conf.json.bak_brand_20260128_222730
src-tauri/src/: conversation.rs  db.rs  main.rs  main.rs.bak_20260130_013941  mcp.rs  mcp_client.rs  ollama_proxy.rs  ollama_proxy.rs.bak_fix  secrets.rs  storage.rs  voice.rs  workspace.rs  workspace.rs.bak_20260130_024113
(+144 files in other folders)
