[package]
name = "app"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = [ "dialog-confirm", "dialog-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
lazy_static = "1.4"

tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "process", "io-util"] }

# Secrets storage
keyring = "2"

# Ollama proxy (Rust-side HTTP client + streaming)
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"

# FIXED: removed invalid feature "sync"
tokio-util = "0.7"

[features]
custom-protocol = ["tauri/custom-protocol"]
